--- a/tainanfist/testdemo_2.html
+++ b/tainanfist/testdemo_2.html
@@ -4756,7 +4756,7 @@ $(document).ready(function() {
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/button&gt;&gt;\
 &lt;span id=&#39;supportercode-error&#39;&gt;&lt;/span&gt;
-&lt;/div&gt;&lt;&lt;/linkreplace&gt;</tw-passagedata><tw-passagedata pid="52" name="第二章1" tags="autosave center" position="1800,100" size="100,100">&lt;&lt;set $story to 1&gt;&gt;\
+&lt;/div&gt;&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="52" name="第二章1" tags="autosave center" position="1800,100" size="100,100">&lt;&lt;set $story to 1&gt;&gt;\
 &lt;h1&gt;【第二章】刮骨療毒&lt;/h1&gt;
 
 &lt;div id=&#39;story&#39;&gt;&lt;&lt;include &#39;第二章1內文&#39;&gt;&gt;&lt;/div&gt;
