--- a/tainanfist/testdemo.html
+++ b/tainanfist/testdemo.html
@@ -5308,6 +5308,7 @@ $(document).ready(function() {
 你繼續跟隨千歲的腳步，尋找其他的拳師。
 
 @@color:red;（遊戲測試結束，感謝大家！）@@
+&lt;&lt;replace &#39;#storylink&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;
 /*
 &lt;&lt;replace &#39;#storylink&#39;&gt;&gt;&lt;&lt;button &#39;繼續挑戰後日談&#39; &#39;片刻休息0&#39;&gt;&gt;&lt;&lt;set $restchoice to &#39;3&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/replace&gt;&gt;
 */
