--- a/tainanfist/testdemov2.html
+++ b/tainanfist/testdemov2.html
@@ -98,7 +98,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="府城謎拳雛形v6" startnode="6" creator="Twine" creator-version="2.8.0" format="SugarCube" format-version="2.36.1" ifid="2AC7FFE6-4787-4918-8961-4466A7EBC28E" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@charset "UTF-8";
+	<tw-storydata name="府城謎拳雛形v6" startnode="6" creator="Twine" creator-version="2.6.2" format="SugarCube" format-version="2.36.1" ifid="2AC7FFE6-4787-4918-8961-4466A7EBC28E" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@charset "UTF-8";
 /* 自訂樣式： 字型 */
 /* 思源黑體&思源宋體 */
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap");
@@ -188,41 +188,49 @@ body.loading-page {
   background-image: url("https://drive.google.com/uc?id=1YW1KwI24CV2LE2QDzkCAiWsKvVto0HAh");
   display: flex;
   min-height: 100vh;
+  background-size: cover;
 }
 body.bg1 {
   background-image: url("https://drive.google.com/uc?id=1zWLOHj9M92pZA0mJ9cKqvfpKZsC8856w");
   display: flex;
   min-height: 100vh;
+  background-size: cover;
 }
 body.bg2 {
   background-image: url("https://drive.google.com/uc?id=19y-ORu-uymwLJZbu_6I2k5DqUxYQjoJ0");
   display: flex;
   min-height: 100vh;
+  background-size: cover;
 }
 body.bg3 {
   background-image: url("https://drive.google.com/uc?id=13wor0HkKZkAY4O2CuqnOmwLPYljiayqj");
   display: flex;
   min-height: 100vh;
+  background-size: cover;
 }
 body.bg4 {
   background-image: url("https://drive.google.com/uc?id=1-KT_nVg1sVXLO1XYHLOipsqT7n-henyd");
   display: flex;
   min-height: 100vh;
+  background-size: cover;
 }
 body.bg5 {
   background-image: url("https://drive.google.com/uc?id=14fzcSHPJpA57fDKVgKTx-DxHXiJ3O_ri");
   display: flex;
   min-height: 100vh;
+  background-size: cover;
 }
 body.bg6 {
   background-image: url("https://drive.google.com/uc?id=1g0_CSXdOcae3e0bDVZCtaO6Gvfu-vB4X");
   display: flex;
   min-height: 100vh;
+  background-size: cover;
 }
 body.restbg {
   background-image: url("https://drive.google.com/uc?id=1vTYkkmCFc1qHWjCKqYlTHSB4KcJtQw8q");
   display: flex;
   min-height: 100vh;
+  background-size: cover;
 }
 
 /* 小知識補充 */
@@ -394,10 +402,10 @@ body {
   font-family: "Noto Sans TC", sans-serif;
   font-weight: bold;
   /* 背景圖樣式 */
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-attachment: fixed;
   background-position: center;
-  background-size: cover;
+  background-image: url(https://drive.google.com/uc?id=1bpBjo3ivnoWouRQHYFzUUpu_fYrHKrOy);
 }
 
 .fab, .fas {
@@ -5647,7 +5655,7 @@ Llogo.png</tw-passagedata><tw-passagedata pid="85" name="第五章1" tags="autos
 &lt;&lt;timed 1s t8n&gt;&gt;拳師
 以拳維生，以法為道
 生活在府城的漫遊者、觀察者
-接受人、神、妖的各種「委託」維生&lt;/span&gt;
+接受人、神、妖的各種「委託」維生
 
 &lt;&lt;next&gt;&gt;如果你做好準備
 將會踏入這場冒險
