--- a/tainanfist/testdemov2.html
+++ b/tainanfist/testdemov2.html
@@ -248,8 +248,9 @@ body.restbg {
 }
 
 /* 章節0繼續按鈕位置(標籤title) */
-.title .passage #storylink {
+ .title .passage #storylink {
  width: 100%;
+ max-width: 800px;
  position: absolute;
  bottom: 8vh;
  transform: translate(-50%, -50%); 
@@ -359,7 +360,7 @@ body.restbg {
 /* #story：故事區塊 */
 #story {
   text-align: left;
-  max-width: 800px;
+  width: 100%;
 }
 
 /* 自訂樣式： Customizer Variables */
@@ -566,6 +567,8 @@ ul {
 #main {
   margin: 16vh auto 9vh;
   position: relative;
+  width: 100%;
+  max-width: 800px;
 }
 
 #passage-loading-page {
