更新雲段圖片語法
解決google雲端圖片無法正常顯示的問題

--- a/tainanfist/v2備份.html
+++ b/tainanfist/v2備份.html
@@ -185,49 +185,49 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 }
 /* "bg+數字"標籤：自訂背景 */
 body.loading-page {
-  background-image: url("https://lh3.google.com/u/0/d/1YW1KwI24CV2LE2QDzkCAiWsKvVto0HAh");
+  background-image: url("https://drive.google.com/uc?id=1YW1KwI24CV2LE2QDzkCAiWsKvVto0HAh");
   display: flex;
   min-height: 100vh;
   background-size: cover;
 }
 body.bg1 {
-  background-image: url("https://lh3.google.com/u/0/d/1zWLOHj9M92pZA0mJ9cKqvfpKZsC8856w");
+  background-image: url("https://drive.google.com/uc?id=1zWLOHj9M92pZA0mJ9cKqvfpKZsC8856w");
   display: flex;
   min-height: 100vh;
   background-size: cover;
 }
 body.bg2 {
-  background-image: url("https://lh3.google.com/u/0/d/19y-ORu-uymwLJZbu_6I2k5DqUxYQjoJ0");
+  background-image: url("https://drive.google.com/uc?id=19y-ORu-uymwLJZbu_6I2k5DqUxYQjoJ0");
   display: flex;
   min-height: 100vh;
   background-size: cover;
 }
 body.bg3 {
-  background-image: url("https://lh3.google.com/u/0/d/13wor0HkKZkAY4O2CuqnOmwLPYljiayqj");
+  background-image: url("https://drive.google.com/uc?id=13wor0HkKZkAY4O2CuqnOmwLPYljiayqj");
   display: flex;
   min-height: 100vh;
   background-size: cover;
 }
 body.bg4 {
-  background-image: url("https://lh3.google.com/u/0/d/1-KT_nVg1sVXLO1XYHLOipsqT7n-henyd");
+  background-image: url("https://drive.google.com/uc?id=1-KT_nVg1sVXLO1XYHLOipsqT7n-henyd");
   display: flex;
   min-height: 100vh;
   background-size: cover;
 }
 body.bg5 {
-  background-image: url("https://lh3.google.com/u/0/d/14fzcSHPJpA57fDKVgKTx-DxHXiJ3O_ri");
+  background-image: url("https://drive.google.com/uc?id=14fzcSHPJpA57fDKVgKTx-DxHXiJ3O_ri");
   display: flex;
   min-height: 100vh;
   background-size: cover;
 }
 body.bg6 {
-  background-image: url("https://lh3.google.com/u/0/d/1g0_CSXdOcae3e0bDVZCtaO6Gvfu-vB4X");
+  background-image: url("https://drive.google.com/uc?id=1g0_CSXdOcae3e0bDVZCtaO6Gvfu-vB4X");
   display: flex;
   min-height: 100vh;
   background-size: cover;
 }
 body.restbg {
-  background-image: url("https://lh3.google.com/u/0/d/1vTYkkmCFc1qHWjCKqYlTHSB4KcJtQw8q");
+  background-image: url("https://drive.google.com/uc?id=1vTYkkmCFc1qHWjCKqYlTHSB4KcJtQw8q");
   display: flex;
   min-height: 100vh;
   background-size: cover;
@@ -418,7 +418,7 @@ body {
   background-repeat: repeat;
   background-attachment: fixed;
   background-position: center;
-  background-image: url(https://lh3.google.com/u/0/d/1bpBjo3ivnoWouRQHYFzUUpu_fYrHKrOy);
+  background-image: url(https://drive.google.com/uc?id=1bpBjo3ivnoWouRQHYFzUUpu_fYrHKrOy);
 }
 
 .fab, .fas {
@@ -612,7 +612,7 @@ ul {
 }
 
 header {
-  background-image: url("https://lh3.google.com/u/0/d/1tpdkZwZYaOc6zcRKwveSYgYVD2_uHSzw");
+  background-image: url("https://drive.google.com/uc?id=1tpdkZwZYaOc6zcRKwveSYgYVD2_uHSzw");
   background-repeat: repeat;
   position: fixed;
   top: 0;
@@ -812,7 +812,7 @@ header.toggled #header-body {
 }
 
 footer {
-  background-image: url("https://lh3.google.com/u/0/d/1ngYJ5gc3MyhG5hvuEDOonEznW-J0ypZf");
+  background-image: url("https://drive.google.com/uc?id=1ngYJ5gc3MyhG5hvuEDOonEznW-J0ypZf");
   background-repeat: repeat;
   position: fixed;
   bottom: 0;
@@ -3900,7 +3900,7 @@ Macro.add('message', {
 &lt;div class=&quot;content&quot;&gt;
 
 &lt;!-- STORY BANNER/LOGO POPULATED HERE --&gt;
-&lt;img src=&quot;https://lh3.google.com/u/0/d/1OoI5I2cYFB8Mfp8qboTgOKD-6xhXQbRt&quot; width=&quot;100%&quot;&gt;
+&lt;img src=&quot;https://drive.google.com/uc?id=1OoI5I2cYFB8Mfp8qboTgOKD-6xhXQbRt&quot; width=&quot;100%&quot;&gt;
 天地無門&lt;br&gt;&lt;br&gt;&lt;br&gt;
 
 &lt;&lt;button &quot;開新遊戲&quot; &quot;序章0-1&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
@@ -4080,7 +4080,7 @@ Normal text. Normal text. Normal text. Normal text. Normal text. //emphasised te
 
 &lt;!-- IMPORTAN! INCLUDE THE CODE BELOW ON ALL STAT PAGES TO MAKE SURE THE LINK RETURNS THE USER TO THE LAST PASSAGE. IF YOU USE A NORMAL RETURN LINK IT WILL SIMPLY LOOP --&gt;
 
-&lt;span style=&quot;display: block; text-align: center;&quot;&gt;&lt;&lt;link &quot;« 返回遊戲&quot; $return&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;</tw-passagedata><tw-passagedata pid="14" name="遊戲標題" tags="noreturn" position="0,0" size="100,100">府城謎拳</tw-passagedata><tw-passagedata pid="15" name="遊戲副標題" tags="noreturn" position="100,0" size="100,100">天地無門</tw-passagedata><tw-passagedata pid="16" name="遊戲LOGO" tags="noreturn" position="200,0" size="100,100">&lt;img src=&quot;https://lh3.google.com/u/0/d/1OoI5I2cYFB8Mfp8qboTgOKD-6xhXQbRt&quot; height=&quot;80px&quot;&gt;</tw-passagedata><tw-passagedata pid="17" name="製作群" tags="noreturn" position="300,0" size="100,100">街密小組
+&lt;span style=&quot;display: block; text-align: center;&quot;&gt;&lt;&lt;link &quot;« 返回遊戲&quot; $return&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;</tw-passagedata><tw-passagedata pid="14" name="遊戲標題" tags="noreturn" position="0,0" size="100,100">府城謎拳</tw-passagedata><tw-passagedata pid="15" name="遊戲副標題" tags="noreturn" position="100,0" size="100,100">天地無門</tw-passagedata><tw-passagedata pid="16" name="遊戲LOGO" tags="noreturn" position="200,0" size="100,100">&lt;img src=&quot;https://drive.google.com/uc?id=1OoI5I2cYFB8Mfp8qboTgOKD-6xhXQbRt&quot; height=&quot;80px&quot;&gt;</tw-passagedata><tw-passagedata pid="17" name="製作群" tags="noreturn" position="300,0" size="100,100">街密小組
 
 &lt;&lt;link &quot;« 返回遊戲&quot; $return&gt;&gt;&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="18" name="序章0-1" tags="center nofooter bg1" position="1000,100" size="100,100">&lt;&lt;notify&gt;&gt;序章&lt;&lt;/notify&gt;&gt;&lt;&lt;run showheader()&gt;&gt;&lt;&lt;run showfooter()&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;府城
@@ -4787,7 +4787,7 @@ $(document).ready(function() {
 &lt;&lt;/if&gt;&gt;\
 &lt;&lt;if $story is 3&gt;&gt;\
 &lt;div id=&quot;speech&quot;&gt;\
-&lt;img src=&quot;https://lh3.google.com/u/0/d/1WPQWH6XIXgQW_S5TV1-cpC4FKezZcGZm&quot; width=&quot;90%&quot;&gt;/* &lt;&lt;htmlimg &quot;千歲.png&quot; &quot;90%&quot;&gt;&gt; */
+&lt;img src=&quot;https://drive.google.com/uc?id=1WPQWH6XIXgQW_S5TV1-cpC4FKezZcGZm&quot; width=&quot;90%&quot;&gt;/* &lt;&lt;htmlimg &quot;千歲.png&quot; &quot;90%&quot;&gt;&gt; */
 &lt;i&gt;「你們到底是誰？為什麼要拼命追趕我們。」&lt;/i&gt;&lt;/div&gt;
 &lt;&lt;/if&gt;&gt;\
 &lt;&lt;if $story is 4&gt;&gt;\
