--- a/tainanfist/testdemov2.html
+++ b/tainanfist/testdemov2.html
@@ -185,7 +185,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 }
 /* "bg+數字"標籤：自訂背景 */
 body.loading-page {
-  background-image: url("https://lh3.google.com/u/0/d/1YW1KwI24CV2LE2QDzkCAiWsKvVto0HAh");
+  background-image: url("https://lh3.googleusercontent.com/d/1YW1KwI24CV2LE2QDzkCAiWsKvVto0HAh");
   display: flex;
   min-height: 100vh;
   background-size: cover;
