--- a/tainanfist/testdemov3.html
+++ b/tainanfist/testdemov3.html
@@ -1103,19 +1103,17 @@ footer #story-menu button {
     text-shadow: 1px 1px 2px #9bafb8;
   }
 }
-/* 觸碰螢幕裝置的按鈕hover效果 */
-@media screen and (hover: none) {
-  #passages .link-internal.macro-button:active {
-    color: var(--color5);
-    border: 1px solid;
-    box-shadow: inset 0 0 20px rgba(201, 65, 108, 0.5), 0 0 20px rgba(225, 51, 45, 0.2);
-    outline: 1px solid !important;
-    outline-color: rgba(225, 51, 45, 0) !important;
-    outline-offset: 15px;
-    text-shadow: 1px 1px 2px #d4dce0;
-  }  
+/* 觸碰螢幕裝置的按鈕用active取代hover效果 */
 
-}
+#passages .link-internal.macro-button:active {
+	color: var(--color5);
+	border: 1px solid;
+	box-shadow: inset 0 0 20px rgba(201, 65, 108, 0.5), 0 0 20px rgba(225, 51, 45, 0.2);
+	outline: 1px solid !important;
+	outline-color: rgba(225, 51, 45, 0) !important;
+	outline-offset: 15px;
+	text-shadow: 1px 1px 2px #d4dce0;
+}  
 
 .passage {
   text-align: justify;
