--- a/tainanfist/testdemov3.html
+++ b/tainanfist/testdemov3.html
@@ -1104,8 +1104,7 @@ footer #story-menu button {
   }
 }
 /* 觸碰螢幕裝置的按鈕用active取代hover效果 */
-
-#passages .link-internal.macro-button:active {
+#passages .link-internal.macro-button:focus {
 	color: var(--color5);
 	border: 1px solid;
 	box-shadow: inset 0 0 20px rgba(201, 65, 108, 0.5), 0 0 20px rgba(225, 51, 45, 0.2);
