--- a/tainanfist/testdemov3.html
+++ b/tainanfist/testdemov3.html
@@ -5923,7 +5923,7 @@ Llogo.png</tw-passagedata><tw-passagedata pid="85" name="第五章1" tags="autos
 (木剋土，土剋水，水剋火，火剋金，金剋木)
 &lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="116" name="第四章關卡2-1" tags="autosave center" position="3825,1250" size="100,100">&lt;&lt;set $random to random(1,5)&gt;&gt;&lt;&lt;set _hp to 3&gt;&gt;
 &lt;div id=&quot;speech&quot;&gt;\
-    &lt;&lt;= &quot;&lt;img src=&#39;&quot; + setup.ImagePath + &quot;無支歧&quot; + $random +&quot;.png&#39; width=&#39;50%&#39;&gt;&quot;&gt;&gt;
+    &lt;&lt;= &quot;&lt;img src=&#39;&quot; + setup.ImagePath + &quot;無支歧&quot; + $random +&quot;.png&#39; width=&#39;70%&#39;&gt;&quot;&gt;&gt;
     &lt;i&gt;&lt;&lt;if _hp is 3&gt;&gt;&lt;table style=&#39;width: 120px;margin: auto;&#39;&gt;
     &lt;tr&gt;
         &lt;td&gt;&lt;&lt;htmlimg &quot;hp.png&quot; &quot;20px&quot;&gt;&gt;&lt;/td&gt;
@@ -6321,7 +6321,8 @@ Llogo.png</tw-passagedata><tw-passagedata pid="85" name="第五章1" tags="autos
 &lt;&lt;/button&gt;&gt;\
 &lt;/div&gt;
 &lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="141" name="第四章關卡2-2" tags="autosave center" position="3925,1250" size="100,100">&lt;div id=&quot;speech&quot;&gt;\
-    &lt;&lt;= &quot;&lt;img src=&#39;&quot; + setup.ImagePath + &quot;無支歧&quot; + $random +&quot;.png&#39; width=&#39;50%&#39;&gt;&quot;&gt;&gt;
+    &lt;&lt;= &quot;&lt;img src=&#39;&quot; + setup.ImagePath + &quot;無支歧&quot; + $random +&quot;.png&#39; width=&#39;70%&#39;&gt;&quot;&gt;&gt;
+    &lt;i&gt;&lt;table style=&#39;width: 120px;margin: auto;&#39;&gt;&lt;tr&gt;&lt;td&gt;&lt;&lt;htmlimg &quot;hp.png&quot; &quot;20px&quot;&gt;&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;/i&gt;
     &lt;i&gt;「受死吧！」&lt;/i&gt;
 &lt;/div&gt;
 
